--- a/index.html
+++ b/index.html
@@ -485,19 +485,22 @@
               <h5>May 2021 - Present</h5>
               <p><em>Kaisura Inc, MA </em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Developing a neural network robustness evaluation tool for security consultants.</li>
+                <li>Using TensorFlow, PyTorch, Adversarial Robustness Toolbox, and various adversarial robustness APIs.</li>
+                <li>Researching model extraction methods & potential preventative methods.</li>
+                <li>https://www.kaisura.com/</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>Summer 2021</h5>
-              <p><em>WPI Robotics Library (WPILib), Worcester Polytechnic University</em></p>
+              <p><em>WPI Robotics Library (WPILib), Worcester Polytechnic University, MA</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Developed a machine learning tool for FRC teams that retrains a
+                  MobileNet to do object detection.</li>
+                <li>Utilized React, Tensorflow, GraphQL, Docker</li>
+                <li>https://docs.wpilib.org/en/latest/docs/software/wpilib-tools/axon/index.html</li>
+                <li>https://github.com/wpilibsuite/Axon</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -505,48 +508,71 @@
               <h5>2018 - 2020</h5>
               <p><em>KTBYTE Computer Science Academy, Lexington, MA</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Developed curriculum and taught students Arduino Programming, circuit
+                  building, and sensors. </li>
+                <li>https://www.ktbyte.com/</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Extracurriculars</h3>
             <div class="resume-item">
-              <h4>Music, Perception, and Robotics Lab</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Researcher @ Music, Perception, and Robotics Lab</h4>
+              <h5>2021 - Present</h5>
+              <p><em>Worcester Polytechnic Institute</em></p>
+              <ul>
+                <li>Researching Realtime Onset Detection for generative or synchronous robotic accompaniment.</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>First Robotics Team 190</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Mentor @ First Robotics Team 190 (Former Student)</h4>
+              <h5>2019 - Present</h5>
+              <p><em>Mass Academy/Worcester Polytechnic Institute</em></p>
+              <ul>
+                <li>Current controls mentor who helps students code the robot.</li>
+                <li>As a student, worked on subsystem programming using command based programming in Java.</li>
+                <li>As a student, worked on vision system for automatic acquisition of target.</li>
+                <li>As a student, acted as Pit Boss, who was in charge of all repairs during competition during 2k20 season.</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>Noctem Development Inc.</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Founder & Director @ Noctem Development Inc.</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Worcester Polytechnic Institute</em></p>
+              <ul>
+                <li>Founded Noctem Devlopment - a 501(c)3 non-profit organization dedicated to promoting problem solving in computer science.</li>
+                <li>https://noctem.dev/</li>
+                <li>Acted as tournament director & problem writer for multiple coding competitions, both in-person and online.</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>Mass Academy Programming Team</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Captain @ Mass Academy Programming Team</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Massachusetts Academy of Math & Science @ WPI</em></p>
+              <ul>
+                <li>Lead weekly meetings & prepared problem sets for members.</li>
+                <li>Competed in the ACSL competition & various other local coding competitions with the team.</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>ABRHS IdeaLab</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Developer/Captain @ IdeaLab</h4>
+              <h5>2017 - 2019</h5>
+              <p><em>Acton Boxborough Regional High School</em></p>
+              <p>Created a website for the club.</p>
+              <ul>
+                <li>Lead weekly meetings & worked on software projects.</li>
+                <li>Organized participation in various local hackathons.</li>
+                <li>Founded ACSL program at the school & created problem sets for the team.</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>ABRHS Science Olympiad</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>National Team Member @ ABRHS Science Olympiad</h4>
+              <h5>2017 - 2019</h5>
+              <p><em>Acton Boxborough Regional High School</em></p>
+              <ul>
+                <li>Competed in Helicopters & Towers my Freshman year at the Scioly National Tournament, MIT Invitational, & Yale Invitational.</li>
+                <li>Competed in Mousetrap Vehicle, Wright Stuff & Mission Possible my Sophomore year at the MIT Invitational, Harvard Invitational & Brown Invitational.</li>
+                <li>See Awards for Medals.</li>
+              </ul>
             </div>
 
           </div>
@@ -556,34 +582,19 @@
               <h4>Undergraduate in Computer Science & Robotics Engineering</h4>
               <h5>2020 - Present</h5>
               <p><em>Worcester Polytechnic University, Worcester, MA </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <p>Working towards a bachelor’s degree in Computer Science & Robotics
+                Engineering: Current 4.0/4.0 GPA</p>
             </div>
             <div class="resume-item">
-              <h4>Student</h4>
+              <h4>High School Graduate</h4>
               <h5>2019 - 2021</h5>
               <p><em>Massachusetts Academy of Math & Science @ WPI, Worcester, MA</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <p>The Massachusetts Academy of Math and Science is a free, co-educational, public school of excellence that enrolls approximately 100 academically accelerated 11th and 12th grade students from Massachusetts. Math and science are emphasized within a comprehensive, interactive academic program. Rigorous junior year classes and senior classes taken at Worcester Polytechnic Institute (WPI) prepare students for college academics before they’ve graduated from high school. https://www.massacademy.org/ </p>
             </div>
             <div class="resume-item">
-              <h4>Student</h4>
+              <h4>Former Student</h4>
               <h5>2017 - 2019</h5>
               <p><em>Acton Boxborough Regional High School, Acton, MA</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
             </div>
 
             <h3 class="resume-title">Awards</h3>
