filled in awards and community service

--- a/index.html
+++ b/index.html
@@ -597,30 +597,77 @@
               <p><em>Acton Boxborough Regional High School, Acton, MA</em></p>
             </div>
 
-            <h3 class="resume-title">Awards</h3>
+            <h3 class="resume-title">Awards (See Portfolio (Coming Soon) for details.)</h3>
+              <div class="resume-item">
+                <h4>USACO Gold Division </h4>
+                <h5>2018</h5>
+              </div>
             <div class="resume-item">
-              <h4>Coming Soon</h4>
+              <h4>MIT Lemelson InventTeam National Grant Finalist </h4>
+              <h5>2020</h5>
             </div>
-            <h3 class="resume-title">Community Service</h3>
+            <div class="resume-item">
+              <h4>Cyber Patriot Platinum Division </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>Cyber Patriot Platinum Division & 1st place State </h4>
+              <h5>2020</h5>
+            </div>
+            <div class="resume-item">
+              <h4>MIT Blueprint 1st Place Senior Division </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>MetroHacks 1st Place Health Track </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>HackExeter 2nd Place </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>MIT Invitational 2nd Place Mission Possible </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>MIT Invitational 3rd Place MouseTrap Vehicle </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>Science Olympiad National Tournament 2nd Place GameOn </h4>
+              <h5>2018</h5>
+            </div>
+            <div class="resume-item">
+              <h4>Science Olympiad National Tournament 10th Place Towers </h4>
+              <h5>2018</h5>
+            </div>
+            <div class="resume-item">
+              <h4>Northern Connecticut District Innovation in Controls Award </h4>
+              <h5>2018</h5>
+            </div>
+            <div class="resume-item">
+              <h4>High School Mathematical Contest in Modeling (HIMCM) Meritorious Award </h4>
+              <h5>2019</h5>
+            </div>
+            <div class="resume-item">
+              <h4>AIME Qualifier</h4>
+              <h5>2021</h5>
+            </div>
+          <h3 class="resume-title">Community Service</h3>
             <div class="resume-item">
               <h4>Noctem Development (See Extracurriculars)</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h5>2019-2021</h5>
+              <p><em>Founder</em></p>
             </div>
             <div class="resume-item">
               <h4>Helping Hands for Relief Development</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h5>2021</h5>
+              <p><em>Java Instructor</em></p>
+              <p>Taught High School Syrian Refugee students in Jordan Java virtually.</p>
             </div>
           </div>
-          </div>
-
-
-          </div>
         </div>
-
       </div>
     </section><!-- End Resume Section -->
 
