Good enough to start applying, still lacks some portfolio sections

--- a/2001-Portfolio.html
+++ b/2001-Portfolio.html
@@ -49,6 +49,21 @@
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/2001-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/2001-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/2001-3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/2001-4.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -57,9 +72,28 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Coming Soon!</h3>
+              <h3>Project Information</h3>
+              <ul>
+                <li><strong>Project Name</strong>: 4 Bar Design and Gearbox Analysis</li>
+                <li><strong>Class</strong>: RBE2001</li>
+                <li><strong>Project Date</strong>: Spring, 2022</li>
+                <li><strong>Demo Video</strong>: <a href="https://drive.google.com/file/d/1JHA-rhgipliRR1aMrJ5n22zgRYejwKYE/view?usp=sharing" target="_blank">link</a></li>
+              </ul>
             </div>
-
+            <div class="portfolio-description">
+              <h2>Project Description & Contributions</h2>
+              <p>
+                The objective of the project is to utilize the Romi Robot base and design a four bar mechanism to pick and place "solar panels" on a roof of a specific angle. There are two roofs, so two robots with two different designs are necessary.
+                In order for the design to be approved, the robot had to meet many requirements such as center of mass stability, strength of material, and transmission design for ample torque.
+              </p>
+              <ul>
+                <li>Team Lead</li>
+                <li>Designed both four Bars in SolidWorks</li>
+                <li>Chose Gear-box ratio according to maximum load simulation in solidworks</li>
+                <li>3D-Printed, Assembled, and Wired both robots</li>
+                <li>Programmed the state machine</li>
+              </ul>
+            </div>
           </div>
 
         </div>
