--- a/3002-Portfolio.html
+++ b/3002-Portfolio.html
@@ -49,6 +49,17 @@
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/3002-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/3002-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/3002-3.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -57,9 +68,28 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Coming Soon!</h3>
+              <h3>Project Information</h3>
+              <ul>
+                <li><strong>Project Name</strong>: LiDAR SLAM and Particle Filter Map Localization</li>
+                <li><strong>Class</strong>: RBE3002</li>
+                <li><strong>Project Date</strong>: Fall 2022</li>
+              </ul>
             </div>
-
+            <div class="portfolio-description">
+              <h2>Project Description & Contributions</h2>
+              <p>
+                The objective of this project was to implement SLAM using a LiDAR on a turtlebot running ROS to fully map an unknown environment, while avoiding any collisions.
+                Upon doing so, the robot will be moved to an unknown location in the environment and then be required to navigate to a designated goal point.
+              </p>
+              <ul>
+                <li>Team Leader</li>
+                <li>Implemented basic trajectory navigation using PID control</li>
+                <li>Implemented A* Path Planning</li>
+                <li>Implemented frontier/boundary exploration</li>
+                <li>Implemented LiDAR SLAM</li>
+                <li>Implemented Map localization using a Particle Filter</li>
+              </ul>
+            </div>
           </div>
 
         </div>
