--- a/MQP-Portfolio.html
+++ b/MQP-Portfolio.html
@@ -45,21 +45,56 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-7">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/MQP-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/MQP-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/MQP-3.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Coming Soon!</h3>
-            </div>
 
+
+          <div class="col-lg-5">
+            <div class="portfolio-info">
+              <h3>Project Information</h3>
+              <ul>
+                <li><strong>Project Name</strong>: Augmented Reality Human-Robot Interface for Assisting Robotic Manipulation</li>
+                <li><strong>Research Laboratory </strong>: HiRO Lab</li>
+                <li><strong>Project date</strong>: August 2023 - May 2024</li>
+                <li><strong>Research Paper</strong>: <a href="https://digital.wpi.edu/pdfviewer/9w032757f" target="_blank">Link</a></li>
+                <li><strong>Demo Video (Must Watch!)</strong>: <a href="https://drive.google.com/file/d/12w3QIbielf7dAr72jzaW03HyuShu4CPf/view?usp=sharing" target="_blank">Link</a></li>
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <h4>Abstract</h4>
+              <p style="font-size:14px">
+                Robot autonomy has imprecision in both perception and action. Human assistance can correct this inaccuracy by teaching a robot to make corrective adjustments. The Microsoft HoloLens 2 is an Augmented Reality headset that allows users to view and manipulate holograms in three dimensions, making it well-suited for intuitive Human-Robot Interaction. However, its tracking capabilities are poorly tailored for fine robot control.
+                Our team proposes a human-robot collaborative workspace, as well as a collection of AR Human-Robot Interfaces designed to facilitate human-assisted robotic manipulation. Additionally, we designed a compound manipulation and perception task to showcase our proposed platform's ability to assist robot autonomy and propose a user study to evaluate its efficacy.
+              </p>
+              <h5>Contributions</h5>
+              <ul style="font-size:13px">
+                <li>Robotic Control & Vision Sub-team Leader</li>
+                <li>Robust Multi-camera fusion system for real-time robot and object pose detection using AprilTags</li>
+                <li>Coordinate Space colocation with HoloLens V-SLAM system </li>
+                <li>Inverse Kinematics of Robot Arm in conjunction w/ AR interface control</li>
+                <li><strong>Stack</strong>: Python, C++, C#</li>
+                <li><strong>Tags</strong>: ROS, OpenCV, AprilTags, Azure Spatial Anchors, Unity , HoloLens</li>
+              </ul>
+            </div>
           </div>
 
         </div>
