--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
                 <h4>Augmented Reality Human-Robot Interface for Assisting Robotic Manipulation</h4>
                 <p>MQP Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/MQP-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/MQP-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="System Component Diagram"><i class="bx bx-plus"></i></a>
+                  <a href="MQP-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -627,8 +627,8 @@
                 <h4>LIDAR SLAM, Particle Filter Localization, A* Path Planning</h4>
                 <p>RBE 3002</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/3002-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/3002-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="SLAM RVIZ Mapping Visualization"><i class="bx bx-plus"></i></a>
+                  <a href="3002-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -641,8 +641,8 @@
                 <h4>Inverse Kinematics, Trajectory Planning, and Manipulation using 6DOF Arm</h4>
                 <p>RBE 3001</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/3001-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/3001-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Robot Arm and Objects"><i class="bx bx-plus"></i></a>
+                  <a href="3001-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -655,8 +655,8 @@
                 <h4>Mechanical Design</h4>
                 <p>RBE 2001</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/2001-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/2001-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="4 Bar Robot"><i class="bx bx-plus"></i></a>
+                  <a href="2001-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -669,8 +669,10 @@
                 <h4>Real-Time Embedded Systems Spectrum Analyser</h4>
                 <p>ECE3849</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/3849-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/3849-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Spectrum Analyser"><i class="bx bx-plus"></i></a>
+<!--                  <a href="3849-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+
                 </div>
               </div>
             </div>
@@ -683,49 +685,56 @@
                 <h4>Geolocation Prediction with Vision Transformers</h4>
                 <p>CS541</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/541-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/541-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ViT Diagram"><i class="bx bx-plus"></i></a>
+<!--                  <a href="541-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-high filter-robotics">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/FRC-Portfolio.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>FRC Team 190 2019 Robot</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/FRC-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/FRC-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="FRC Robot - Unfinished"><i class="bx bx-plus"></i></a>
+<!--                  <a href="FRC-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-high">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HydraGuard.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>HydraGuard</h4>
+                <p>Hackathon Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/HydraGuard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="HydraGuard Prototype"><i class="bx bx-plus"></i></a>
+<!--                  <a href="HydraGuard.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-high">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Scioly-Portfolio.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Various Projects</h4>
+                <p>Science Olympiad</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Scioly-Portfolio.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Mission Possible - Rube Goldberg Machine"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+
+                  <!--                  <a href="Scioly-Portfolio.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
