--- a/3001-Portfolio.html
+++ b/3001-Portfolio.html
@@ -49,6 +49,9 @@
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/3001-Portfolio.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -57,9 +60,27 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Coming Soon!</h3>
+              <h3>Project Information</h3>
+              <ul>
+                <li><strong>Project Name</strong>: Color Sorting Pick and Place Robot Arm</li>
+                <li><strong>Class</strong>: 3001</li>
+                <li><strong>Project date</strong>: Fall 2022</li>
+                <li><strong>Project Demo</strong>: <a href="https://youtu.be/bGJdHUyCPmg" target="_blank">link</a></li>
+              </ul>
             </div>
-
+            <div class="portfolio-description">
+              <h2>Project Description & Contributions</h2>
+              <p>
+                The objective of this project is to program the 6DOF robot arm to successfully pick up the color objects and place them in various locations. This requires a robust trajectory planning protocol
+                and then the use of the camera to identify the locations of the objects to then manipulate them effectively.
+              </p>
+              <ul>
+                <li>Team Leader</li>
+                <li>Matlab Scripting</li>
+                <li>Inverse Kinematics calculations using Jacobian and DH</li>
+                <li>Computer Vision w/ Camera intrinsics calibration, Color Mask, and PnP</li>
+              </ul>
+            </div>
           </div>
 
         </div>
